# plaste

./: .gitignore  Makefile  README.md  plaste.cabal
app/: Main.hs
database_scripts/: database.ddl  delete_database.ddl  delete_plaste.ddl  plaste.ddl
src/Web/: Plaste.hs
src/Web/Plaste/: Database.hs  Html.hs  Router.hs  Run.hs  Types.hs
