name:                plaste
version:             0.1
synopsis:            A place to paste your texts
description:         Please see README.md
homepage:            https://github.com/soupi/plaste#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Gil Mizrahi
maintainer:          gilmi@posteo.net
copyright:           2018 Gil Mizrahi
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     database_scripts/database.ddl
                     database_scripts/delete_database.ddl
                     database_scripts/plaste.ddl
                     database_scripts/delete_plaste.ddl

library
  hs-source-dirs:      src
  exposed-modules:     Web.Plaste
                       Web.Plaste.Database
                       Web.Plaste.Types
                       Web.Plaste.Html
                       Web.Plaste.Run
                       Web.Plaste.Router

  ghc-options:         -Wall -fno-warn-type-defaults
                       -Wno-redundant-constraints
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     -- framework
                     , Spock >= 0.11
                     , Spock-core >= 0.11
                     -- html
                     , lucid
                     , Spock-lucid
                     -- tls support
                     , warp
                     , warp-tls
                     -- database integration
                     , hasql
                     , hasql-transaction
                     -- time handling
                     , time
                     -- render as markdown
                     , cheapskate
                     , cheapskate-lucid
                     -- serve static files
                     , wai-middleware-static
                     -- utils
                     , containers
                     , bytestring
                     , text
                     , directory
                     , process
                     , optparse-generic
                     , transformers
                     , mtl
                     , contravariant
                     , stm
                     , pureMD5
                     , network-uri
                     , http-types
                     , mime-mail

  default-extensions:  OverloadedStrings
                     , LambdaCase
                     , ViewPatterns
                     , ScopedTypeVariables
                     , RecordWildCards
                     , NamedFieldPuns
                     , TupleSections
                     , DeriveFunctor
                     , DeriveGeneric
                     , EmptyDataDecls

executable plaste
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , plaste

